Change jupyter notebooks names and format.

--- a/chair_example.ipynb
+++ b/chair_example.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from mayavi import mlab\n",
+    "from mayavi.mlab import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -14,16 +25,17 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "use3DEngine = True\n",
     "\n",
-    "from mayavi import mlab\n",
-    "from mayavi.mlab import *\n",
-    "mlab.init_notebook()"
+    "if use3DEngine==True:\n",
+    "    mlab.init_notebook()\n",
+    "else:\n",
+    "    mlab.init_notebook('png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,13 +72,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9510388c9ea48a6a7dc84222bd71ff2",
+       "model_id": "d059d80121ac4c10b156b1b27d962bb8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -79,7 +91,8 @@
     }
    ],
    "source": [
-    "triangular_mesh(x, y, z, triangles, scalars=np.random.rand(len(x)))"
+    "triangular_mesh(x, y, z, triangles, scalars=np.random.rand(len(x)))\n",
+    "orientation_axes()"
    ]
   },
   {
